class Historicos {
    constructor() {
        this.datos = [];
    }

    accederDatos() {}
}

module.exports = Historicos;