class IZocalos {
    mostrarZocalos() {}
}

module.exports = IZocalos;