class Reloj {
    mostrarHora() {}
}

module.exports = Reloj;