class Plantilla {
    constructor() {
        this.tipo = '';
        this.escaleta = null;
    }

    cargarDatos() {}
}

module.exports = Plantilla;