class Zocalo {
    constructor() {
        this.tipo = '';
        this.campos = [];
        this.numeroInsercion = 0;
    }

    insertarCampo() {}
    asignarNumeroInsercion() {}
    asignarIDUnico() {}
}

module.exports = Zocalo;