const Zocalo = require('./Zocalo');

class ZocaloTitulo extends Zocalo {
    constructor() {
        super();
        this.solapa = '';
        this.titulo = '';
    }

    insertarTitulo() {}
}

module.exports = ZocaloTitulo;