class Campo {
    constructor() {
        this.nombre = '';
        this.maxCaracteres = 0;
        this.texto = '';
    }

    apiñarTexto() {}
}

module.exports = Campo;