class Escaleta {
    constructor() {
        this.filas = [];
        this.tiempoTotal = 0;
        this.tiempoRestante = 0;
    }

    agregarFila() {}
    calcularTiempoRestante() {}
    asignarNombreFila() {}
    asignarTipoFila() {}
    asignarTiempoTotal() {}
    mostrarTiempoRestante() {}
    asignarTiempoBloque() {}
    crearFila() {}
}

module.exports = Escaleta;