const IEscaleta = require('../Dominio/IEscaleta');

class GestionEscaleta {
    editarEscaleta() {}
}

module.exports = GestionEscaleta;