const IProgramacion = require('../Dominio/IProgramacion');

class GestionProgramacion {
    programarContenido() {}
}

module.exports = GestionProgramacion;