const IZocalos = require('../Dominio/IZocalos');

class GestionZocalos {
    insertarZocalo() {}
}

module.exports = GestionZocalos;