const IPlantillas = require('../Dominio/IPlantillas');

class OpcionesPlantilla {
    cargarPlantilla() {}
}

module.exports = OpcionesPlantilla;