class SALApp {
    almacenarDatos() {}
    recuperarDatos() {}
}

module.exports = SALApp;