class Usuario {
    constructor() {
        this.rol = '';
    }

    accederModulo() {}
    seleccionarPlantilla() {}
}

module.exports = Usuario;