/**
 * Clase Placa
 * Esta clase representa un tipo genérico de zócalo en la aplicación.
 */
class Placa {
    /**
     * Constructor de la clase Placa
     * Inicializa las propiedades del zócalo genérico.
     */
    constructor() {
        this.tipo = ''; // Tipo de zócalo
        this.campos = []; // Campos asociados al zócalo
    }

    /**
     * Método insertarDatos
     * Método para insertar datos en el zócalo.
     * (Actualmente no implementado)
     */
    insertarDatos() {}

    /**
     * Método asignarIDUnico
     * Método para asignar un ID único al zócalo.
     * (Actualmente no implementado)
     */
    asignarIDUnico() {}
}

module.exports = Placa;