/**
 * Clase IEscaleta
 * Esta clase representa una interfaz para las escaletas en la aplicación.
 * Define un método mostrarEscaleta que debe ser implementado por las clases que extiendan esta interfaz.
 */
class IEscaleta {
    /**
     * Método mostrarEscaleta
     * Método que debe ser implementado por las clases que extiendan esta interfaz.
     * (Actualmente no implementado)
     */
    mostrarEscaleta() {}
}

module.exports = IEscaleta;