class IPlacas {
    mostrarPlacas() {}
}

module.exports = IPlacas;