/**
 * Clase IPlantillas
 * Esta clase representa una interfaz para la gestión de plantillas en la aplicación.
 * Define un método mostrarPlantillas que debe ser implementado por las clases que extiendan esta interfaz.
 */
class IPlantillas {
    /**
     * Método mostrarPlantillas
     * Método que debe ser implementado por las clases que extiendan esta interfaz.
     * (Actualmente no implementado)
     */
    mostrarPlantillas() {}
}

module.exports = IPlantillas;