const Plantilla = require('../../Dominio/ModelosDeDominio/Plantilla');
const Historicos = require('../../Datos/Repositorios/Historicos');

class DCSHA {
    constructor() {
        this.plantillas = [];
    }

    mostrarOpciones() {}
    crearEscaleta() {}
    gestionarPlantillaBase() {}
    gestionarPlantillaDiaAnterior() {}
    importarHistorico() {}
    leerCeldasID() {}
    crearPlantilla() {}
}

module.exports = DCSHA;